--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 	<ul class="no-list" ng-cloak>
 		<li ng-repeat="repo in repos">
 			<h1>{{repo.name}}<h1>
+				<h2>Prueba GitHub</h2>
 		<!--	<img ng-src="{{repo.owner.avatar_url}}"> -->
 
 		<!--	<div class="circular" style="background:url({{repo.owner.avatar_url}});background-position:center;background-size:cover;"></div> -->	<div class="circular" back-img="{{repo.owner.avatar_url}}"></div
-			
+
 		</li>
 	</ul>
 </body>
