--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 <body ng-controller="appControl">
 	<ul class="no-list" ng-cloak>
 		<li ng-repeat="repo in repos">
-			<h1>{{repo.name}}<h1>
-				<h2>Con Brach Test1 y otro commi GitHub</h2>
-		<!--	<img ng-src="{{repo.owner.avatar_url}}"> -->
+			<h1>{{repo.name}}</h1>
+			<h3>{{repo.language}}</h3>
+				<!--	<img ng-src="{{repo.owner.avatar_url}}"> -->
 
-		<!--	<div class="circular" style="background:url({{repo.owner.avatar_url}});background-position:center;background-size:cover;"></div> -->	<div class="circular" back-img="{{repo.owner.avatar_url}}"></div
+		<!--	<div class="circular" style="background:url({{repo.owner.avatar_url}});background-position:center;background-size:cover;"></div> -->
+		<div class="circular" back-img="{{repo.owner.avatar_url}}"></div
 
 		</li>
 	</ul>
